Testing pac pattern